Tue Jul 24 13:42:56 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/hts_templates.html, htsearch/Display.cc (displayMatch):
	Add METADESCRIPTION variable.

Tue Jul 24 13:20:24 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/DocumentDB.{h,cc}: Added FindCoded() method to lookup
	docdb record with URL that's still encoded.

	* htsearch/Display.cc (display, displayMatch, buildMatchList):
	Use new method to avoid problems with URLs that are decoded and
	reencoded with another, more ambiguous url_part_aliases setting.
	Also fixed a problem with date range checking looking at ref before
	checking if it's null.

Thu Jul 12 11:45:05 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/conv_doc.pl, contrib/parse_doc.pl: Fixed EOF handling in
	dehyphenation, fixed to handle %xx codes in title made from URL.

	* contrib/doc2html/doc2html.pl, contrib/doc2html/pdf2html.pl,
	contrib/doc2html/swf2html.pl: Fixed to handle %xx codes in URL title.

Thu Jul  5 11:23:40 2001  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* db/dist/config.guess: Update with more recent GNU version that
	recognizes various flavors of Mac OS X automatically.

	* htlib/DB2_db.cc: Only #include <malloc.h> if we have it. Fixes
	compilation problems on Mac OS X.

	* htlib/String.cc: Include <iostream.h> instead of depreciated
	<stream.h>. Fixes compilation problems with Mac OS X.

	* htlib/Configuration.cc: Make sure we never try to operate on
	strings of no length--accessing string[-1] is a bug--exposed on
	Mac OS X.

Fri Jun 29 11:56:25 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Retriever.cc (got_redirect): Allow the redirect to accept
	relative redirects instead of just full URLs.

Fri Jun 22 16:25:21 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/THANKS.html: Credit Marc Pohl and Robert Marchand.

	* htsearch/Display.cc (buildMatchList): Fix date_factor calculation